# libspgl1

./: .cproject  .gitignore  AUTHORS  COPYING  Makefile.am  README  configure.ac
examples/: arma.cpp  arrayfire.cpp
examples/arma/: arma.cpp
private/: helper_functions.m  helper_functions.m~  step1_initilization.m  step1_initilization.m~  step2_mainloop.m  step3_cleanup_and_logging.m
src/: libspgl1.h
src/lib/: Makefile.am
src/lib/libspgl1/: activeVars.h  all.hpp  heap.h  initialization.hpp  libspgl1.h  math.hpp  matrix_adapter.hpp  oneProjectorCore.h  parameters.hpp  spgl1.hpp  vector_adapter.hpp
src/lib/spgl1++/: activeVars.hpp  all.hpp  initialization.hpp  math.hpp  matrix_adapter.hpp  oneProjectorCore.hpp  parameters.hpp  spgLine.hpp  spgLineCurvy.hpp  spgl1++.hpp  vector_adapter.hpp
test/: A_basic.csv  Makefile.am  test_methods.cpp  test_minimal.cpp  x0_basic.csv  x_after_projection.csv  x_soln.csv  x_to_project.csv
