ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
src/lib \
test

TESTS = \
test/unittest

EXTRA_DIST = \
src/lib/spgl1++/all.hpp \
src/lib/spgl1++/initialization.hpp \
src/lib/spgl1++/math.hpp \
src/lib/spgl1++/matrix_adapter.hpp \
src/lib/spgl1++/oneProjectorCore.hpp \
src/lib/spgl1++/parameters.hpp \
src/lib/spgl1++/spgl1++.hpp \
src/lib/spgl1++/vector_adapter.hpp \
src/lib/spgl1++/spgLineCurvy.hpp \
src/lib/spgl1++/spgLine.hpp