# the library names to build
#lib_LTLIBRARIES = libspgl1++.la

libspgl1++_la_LDFLAGS = -version-info 0:0:2 -no-undefined

# where to install the headers on the system
libspgl1++_ladir = $(includedir)/spgl1++

# the list of header files that belong to the library (to be installed later)
libspgl1++_la_HEADERS = \
spgl1++/all.hpp \
spgl1++/initialization.hpp \
spgl1++/math.hpp \
spgl1++/matrix_adapter.hpp \
spgl1++/oneProjectorCore.hpp \
spgl1++/parameters.hpp \
spgl1++/spgl1++.hpp \
spgl1++/vector_adapter.hpp \
spgl1++/spgLineCurvy.hpp \
spgl1++/spgLine.hpp